--- a/app/src/main/res/layout/activity_drawable_animation.xml
+++ b/app/src/main/res/layout/activity_drawable_animation.xml
@@ -8,7 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.peterleow.androidanimation.DrawableAnimationActivity"
     android:background="@color/background">
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:layout_height="wrap_content">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,5 +19,13 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="43dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewSlideShow2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp" /></LinearLayout>
 
 </RelativeLayout>
