--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,75 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:orientation="vertical"
+    android:background="@color/dodgerblue"
+    android:gravity="center"
     tools:context=".MainActivity">
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Graficos y Animaciones"
+        android:textAlignment="center"
+        android:layout_margin="25dp"
+        android:textSize="30dp"
+        android:textColor="@color/darkblue"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="@string/property_animation"
-        android:id="@+id/btnPropertyAnimation"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
         android:onClick="getPropertyAnimation"
+        android:id="@+id/btnPropertyAnimation"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/view_animation"
+        android:layout_margin="5dp"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
         android:id="@+id/btnViewAnimation"
         android:onClick="getViewAnimation"
         android:layout_below="@+id/btnPropertyAnimation"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/drawable_animation"
+        android:layout_margin="5dp"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
         android:id="@+id/btnDrawableAnimation"
         android:onClick="getDrawableAnimation"
         android:layout_below="@+id/btnViewAnimation"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/canvas"
+        android:layout_margin="5dp"
         android:id="@+id/btnCanvas"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
         android:onClick="getCanvas"
         android:layout_below="@+id/btnDrawableAnimation"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
+        android:layout_margin="5dp"
         android:text="@string/transformation"
         android:id="@+id/btnTransformation"
         android:onClick="getTransformation"
@@ -51,12 +77,15 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:background="@color/darkorange"
+        android:layout_margin="5dp"
         android:text="@string/opengles"
         android:id="@+id/btnOpengles"
         android:onClick="getOpengles"
         android:layout_below="@+id/btnTransformation"
         android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+</LinearLayout>
