--- a/app/src/main/res/layout/activity_view_animation.xml
+++ b/app/src/main/res/layout/activity_view_animation.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.peterleow.androidanimation.ViewAnimationActivity"
-    android:background="@color/background">
+    android:background="@color/dodgerblue">
 
     <Button
         android:layout_width="wrap_content"
